tests/ui/parser/issues/issue-66357-unexpected-unreachable.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/issue-66357-unexpected-unreachable.rs:12:13
   |
LL | fn f() { |[](* }
   |        -    ^  ^ mismatched closing delimiter
   |        |    |
   |        |    unclosed delimiter
   |        closing delimiter possibly meant for this

error: aborting due to previous error

